--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RedactedRifle</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -12,15 +13,16 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Roboto, sans-serif;
+      font-family: 'Space Grotesk', sans-serif;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
       background: url('https://raw.githubusercontent.com/m-bogu/redacted-site/main/assets/background.jpg') center/cover no-repeat fixed;
-      color: #fff;
+      color: #d0d0d0;
       position: relative;
       overflow: hidden;
+      transition: background 0.3s ease;
     }
 
     body::before {
@@ -28,50 +30,53 @@
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
       background: rgba(0, 0, 0, 0);
-      transition: background 0.4s ease;
+      transition: background 0.3s ease;
       z-index: 0;
+    }
+
+    body.hovering::before {
+      background: rgba(0, 0, 0, 0.35);
     }
 
     .overlay {
       position: relative;
       z-index: 1;
-      background: rgba(0, 0, 0, 0.55);
+      background: rgba(10, 10, 10, 0.35);
       padding: 2.5rem 3rem;
-      border-radius: 16px;
+      border-radius: 14px;
       text-align: center;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(4px);
-      transition: transform 0.2s ease;
-    }
-
-    .overlay:hover ~ body::before {
-      background: rgba(0, 0, 0, 0.4);
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(10px);
+      transition: transform 0.25s ease;
     }
 
     .overlay:hover {
-      transform: scale(1.02);
+      transform: scale(1.015);
     }
 
     h1 {
-      font-size: 2.8rem;
-      margin: 0 0 1.5rem;
-      letter-spacing: 0.5px;
+      font-size: 2.4rem;
+      margin-bottom: 1.5rem;
+      font-weight: 600;
+      letter-spacing: 0.02em;
     }
 
     a.button {
       display: inline-block;
-      padding: 0.9rem 2rem;
+      padding: 0.8rem 1.6rem;
       font-size: 1rem;
-      color: white;
-      background: #007acc;
+      color: #fff;
+      background: #00b4ff;
       text-decoration: none;
       border-radius: 8px;
-      transition: background 0.25s ease;
-      font-weight: 500;
+      font-weight: 600;
+      letter-spacing: 0.05em;
+      transition: background 0.3s ease, transform 0.2s ease;
     }
 
     a.button:hover {
-      background: #005fa3;
+      background: #0091cc;
+      transform: translateY(-2px);
     }
 
     @media (max-width: 600px) {
@@ -79,16 +84,22 @@
         font-size: 2rem;
       }
       a.button {
-        padding: 0.7rem 1.5rem;
         font-size: 0.95rem;
+        padding: 0.75rem 1.3rem;
       }
     }
   </style>
 </head>
 <body>
-  <div class="overlay">
+  <div class="overlay" id="card">
     <h1>RedactedRifle Systems</h1>
     <a class="button" href="https://glances.redactedrifle.com" target="_blank">Dashboard Login</a>
   </div>
+
+  <script>
+    const card = document.getElementById('card');
+    card.addEventListener('mouseenter', () => document.body.classList.add('hovering'));
+    card.addEventListener('mouseleave', () => document.body.classList.remove('hovering'));
+  </script>
 </body>
 </html>
