--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="overlay" id="card">
-    <h1>RedactedRifle Systems</h1>
+    <h1>[REDACTED]rifle Systems</h1>
     <a class="button" href="https://glances.redactedrifle.com" target="_blank">Dashboard Login</a>
   </div>
 
