--- a/index.html
+++ b/index.html
@@ -14,92 +14,88 @@
       margin: 0;
       padding: 0;
       font-family: 'Space Grotesk', sans-serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       height: 100vh;
-      background: url('https://raw.githubusercontent.com/m-bogu/redacted-site/main/assets/background.jpg') center/cover no-repeat fixed;
-      color: #d0d0d0;
-      position: relative;
       overflow: hidden;
-      transition: background 0.3s ease;
+      position: relative;
     }
 
-    body::before {
-      content: '';
+    .background {
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0);
-      transition: background 0.3s ease;
+      background: url('https://raw.githubusercontent.com/m-bogu/redacted-site/main/assets/background.jpg') center/cover no-repeat fixed;
+      transition: all 0.5s ease;
       z-index: 0;
     }
 
-    body.hovering::before {
-      background: rgba(0, 0, 0, 0.35);
+    body.hovering .background {
+      filter: brightness(60%) blur(6px);
     }
 
     .overlay {
       position: relative;
       z-index: 1;
-      background: rgba(10, 10, 10, 0.35);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .card {
+      background: rgba(15, 15, 15, 0.35);
       padding: 2.5rem 3rem;
       border-radius: 14px;
       text-align: center;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(25px);
+      box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
       transition: transform 0.25s ease;
     }
 
-    .overlay:hover {
+    .card:hover {
       transform: scale(1.015);
     }
 
     h1 {
       font-size: 2.4rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
       font-weight: 600;
+      color: #e0e0e0;
       letter-spacing: 0.02em;
     }
 
     a.button {
       display: inline-block;
-      padding: 0.8rem 1.6rem;
+      padding: 0.75rem 1.6rem;
       font-size: 1rem;
-      color: #fff;
-      background: #00b4ff;
+      color: #e0e0e0;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 10px;
+      font-weight: 500;
       text-decoration: none;
-      border-radius: 8px;
-      font-weight: 600;
-      letter-spacing: 0.05em;
-      transition: background 0.3s ease, transform 0.2s ease;
+      transition: all 0.3s ease;
     }
 
     a.button:hover {
-      background: #0091cc;
-      transform: translateY(-2px);
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-      a.button {
-        font-size: 0.95rem;
-        padding: 0.75rem 1.3rem;
-      }
+      background: rgba(255, 255, 255, 0.1);
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      color: #ffffff;
+      border-color: rgba(255, 255, 255, 0.3);
     }
   </style>
 </head>
 <body>
-  <div class="overlay" id="card">
-    <h1>[REDACTED]rifle Systems</h1>
-    <a class="button" href="https://glances.redactedrifle.com" target="_blank">Dashboard Login</a>
+  <div class="background"></div>
+  <div class="overlay" id="overlay">
+    <div class="card">
+      <h1>RedactedRifle Systems</h1>
+      <a class="button" href="https://glances.redactedrifle.com" target="_blank">Dashboard Login</a>
+    </div>
   </div>
 
   <script>
-    const card = document.getElementById('card');
-    card.addEventListener('mouseenter', () => document.body.classList.add('hovering'));
-    card.addEventListener('mouseleave', () => document.body.classList.remove('hovering'));
+    const overlay = document.getElementById('overlay');
+    overlay.addEventListener('mouseenter', () => document.body.classList.add('hovering'));
+    overlay.addEventListener('mouseleave', () => document.body.classList.remove('hovering'));
   </script>
 </body>
 </html>
