--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
       padding: 0;
     }
 
-    body, html {
+    html, body {
       height: 100%;
       width: 100%;
       font-family: 'Titillium Web', sans-serif;
       color: #bfbfbf;
-      overflow: hidden;
     }
 
     .background {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      right: 0;
+      bottom: 0;
       background: url('https://raw.githubusercontent.com/m-bogu/redacted-site/main/assets/background.jpg') center/cover no-repeat fixed;
       transition: filter 0.4s ease;
       z-index: 1;
@@ -35,28 +34,30 @@
       filter: blur(6px);
     }
 
-    .overlay {
+    .container {
       position: relative;
       z-index: 2;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .overlay {
+      background-color: rgba(20, 20, 20, 0.6);
       padding: 3rem;
       border-radius: 12px;
-      background-color: rgba(20, 20, 20, 0.6);
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, opacity 0.8s ease, transform 0.8s ease;
     }
 
     .overlay:hover {
       background-color: rgba(10, 10, 10, 0.8);
     }
 
-    .container {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      text-align: center;
-      position: relative;
-      z-index: 3;
+    .overlay.fade-out {
+      opacity: 0;
+      transform: scale(0.95);
+      pointer-events: none;
     }
 
     h1 {
@@ -97,4 +98,40 @@
     }
   </style>
   <script>
-    document.addEventListener("DOMCo
+    document.addEventListener("DOMContentLoaded", () => {
+      const overlay = document.querySelector(".overlay");
+      const background = document.querySelector(".background");
+      const loginBtn = document.querySelector(".button");
+
+      if (overlay && background && loginBtn) {
+        overlay.addEventListener("mouseenter", () => {
+          background.classList.add("blurred");
+        });
+
+        overlay.addEventListener("mouseleave", () => {
+          background.classList.remove("blurred");
+        });
+
+        loginBtn.addEventListener("click", (e) => {
+          e.preventDefault(); // Stop immediate redirect
+          overlay.classList.add("fade-out");
+          background.classList.remove("blurred");
+
+          setTimeout(() => {
+            window.location.href = loginBtn.href;
+          }, 800); // Match fade transition time
+        });
+      }
+    });
+  </script>
+</head>
+<body>
+  <div class="background"></div>
+  <div class="container">
+    <div class="overlay">
+      <h1>[REDACTED]rifle Systems</h1>
+      <a class="button" href="https://glances.redactedrifle.com" target="_blank">Dashboard Login</a>
+    </div>
+  </div>
+</body>
+</html>
