--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       padding: 3rem;
       border-radius: 12px;
       transition: background-color 0.3s ease, opacity 0.8s ease, transform 0.8s ease;
+      text-align: center;
     }
 
     .overlay:hover {
